<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    tools:context=".AboutActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/info"
                android:layout_width="146dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container"
                app:layout_constraintVertical_bias="0.002" />

            <TextView
                android:id="@+id/info_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:textColor="#000000"
                android:textColorLink="#2434A5"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info"
                app:layout_constraintVertical_bias="0.002" />

            <Button
                android:id="@+id/description"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_content"
                app:layout_constraintVertical_bias="0.002" />

            <TextView
                android:id="@+id/description_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:textColor="#000000"
                android:textColorLink="#2434A5"
                app:layout_constraintBottom_toTopOf="@+id/achieve"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="0.002" />

            <Button
                android:id="@+id/sourcesBtn"
                android:layout_width="151dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/sources"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_content"
                app:layout_constraintVertical_bias="0.002" />

            <TextView
                android:id="@+id/sources_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sourcesBtn"
                app:layout_constraintVertical_bias="0.002" />

            <Button
                android:id="@+id/achieve"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/achievement"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sources_content"
                app:layout_constraintVertical_bias="0.002" />

            <TextView
                android:id="@+id/achieve_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achieve"
                app:layout_constraintVertical_bias="0.002" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>